...
  body: string
  icon: any
}

const data: DataItem[] = [
  {
    title: 'All your favorites',
    body: 'Get all your loved foods in one place, you just place the order we do the rest',
    icon: Icons.ForkKnife,
  },
  {
    title: 'Order from chosen chef',
    body: 'Order from your favorite restaurants and get fast delivery to your doorstep',
...
          onPress={handleChange}
        />
        <TouchableOpacity
          style={styles.skipButton}
          onPress={() => navigation.navigate('Login' as never)}
        >
          <Typo style={styles.skip}>Skip</Typo>
        </TouchableOpacity>
      </View>
    </ScreenComponent>
  )
}

...
